# otter-game-engine

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  SUMMARY.md  main  package-lock.json  package.json
app/: glad.c  main  main.cpp
assets/shaders/: fragment.glsl  vertex.glsl
daily_reports/: day-1-07.07.2024.md
docs/: index.md  legacy-code.md
framework/: CommonTypes.h  ObjectLoader.cpp  ObjectLoader.h  fw_config.h  libheaders.h
libs/stb/: stb_image_write.h
src/: compute_normals.cpp
src/Assets/: untitled.mtl
src/Framework/Rendering/: Material.cpp  Material.h
src/Framework/SceneElements/: GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
src/Game/: Cube_normals.h  House.h  NameInitials.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Tyre.h  Window.cpp
src/model/assets/: AssetManager.cpp  ShaderProgram.h
src/model/entity/: Program.cpp  Program.h  Shader.cpp  Shader.h
src/model/shaders/: fragment.glsl  vertex.glsl
src/view/utils/: Window.cpp  Window.h
